--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -13,7 +13,8 @@
  body {
      font-family: "Tahoma", "Geneva", "sans-serif";
      font-size: 1em;
-    /* max-width: 1200px; */
+    /* max-width: 1200px;
+     */
      background: white;
      margin: auto;
 }
@@ -37,7 +38,7 @@
      font-size: 1em;
      font-family:'serif';
 }
-@media screen and (max-device-width: 375px) {
+ @media screen and (max-device-width: 375px) {
      .h3body {
          font-size: 0.9em;
     }
@@ -77,7 +78,7 @@
      .hero-image {
          background-attachment: scroll;
     }
-       .parallax-image2 {
+     .parallax-image2 {
          background-attachment: scroll;
     }
 }
@@ -85,34 +86,34 @@
 /* Second parallax scrolling image */
 /* Hero image styles */
  @media screen and (min-width: 901px) {
- .parallax-image2 {
-     background-image: url(../images/contenttwo.jpg);
-     height: 6em;
-     min-height: 27em;
-     position: relative;
-     display: block;
-     padding: 10em;
-     background-attachment: fixed;
-     background-position: bottom;
-     background-repeat: no-repeat;
-     background-size: cover;
-     }
+     .parallax-image2 {
+         background-image: url(../images/contenttwo.jpg);
+         height: 6em;
+         min-height: 27em;
+         position: relative;
+         display: block;
+         padding: 10em;
+         background-attachment: fixed;
+         background-position: bottom;
+         background-repeat: no-repeat;
+         background-size: cover;
+    }
 }
 /* End of query */
 /* Change mid image at tablet and below */
  @media screen and (max-width: 900px) {
- .parallax-image2 {
-    background-image: url(../images/contenttwo.jpg);
-    height: 13em;
-    position: relative;
-    display: block;
-    background-position: center;
-    background-size: cover;
-     }
+     .parallax-image2 {
+         background-image: url(../images/contenttwo.jpg);
+         height: 13em;
+         position: relative;
+         display: block;
+         background-position: center;
+         background-size: cover;
+    }
 }
 /* End of query */
 /* Make the middle image smaller at tablet and below */
-@media only screen and (max-device-width: 769px) {
+ @media only screen and (max-device-width: 769px) {
      .parallax-image2 {
          height: 7em;
     }
@@ -188,26 +189,24 @@
     }
 }
 /* Last query */
-/* Target when browser window is <= 900px 
-   Create a fixed nav for tablets and mobiles */
+/* Target when browser window is <= 900px Create a fixed nav for tablets and mobiles */
  @media screen and (max-width: 900px) {
      .navbar {
-    position: fixed; 
-    display: block; 
-    overflow: hidden; 
-    background-color: black;
-    position: fixed;
-    top: -1em;
-    width: 100%;
-    z-index: 1;
+         position: fixed;
+         display: block;
+         overflow: hidden;
+         background-color: black;
+         position: fixed;
+         top: -1em;
+         width: 100%;
+         z-index: 1;
     }
      .navbar a {
-    color: grey;
-    display: block;
-    padding: 0.5em;
-    text-decoration: none;
-    border: none;
-         
+         color: grey;
+         display: block;
+         padding: 0.5em;
+         text-decoration: none;
+         border: none;
     }
      .navbar a:hover {
          background-color: antiquewhite;
@@ -220,8 +219,10 @@
     }
      ul {
          margin-top: 1em;
-    }     
-} 
+    }
+}
+/* Make welcome header fit smaller devices */
+ @media screen and (max-width: 1460px) {
      .parallax-header {
          font-size: 4em;
     }
@@ -243,10 +244,10 @@
 /* End of query*/
 /* Laptop and above styles */
  @media screen and (min-width: 769px) {
-     /* Bigger nav elements for larger resolutions */
+    /* Bigger nav elements for larger resolutions */
      ul {
          font-size: 1.2em;
-     }
+    }
      h1 {
          padding-left: 2em;
     }
@@ -266,20 +267,20 @@
 }
 /* End of query */
 /* Resize the navbar to work at 1170px or less */
-@media screen and (max-width: 1170px) {
-    .container {
-        padding: 0;
+ @media screen and (max-width: 1170px) {
+     .container {
+         padding: 0;
     }
-    ul {
-        font-size: 1em;
+     ul {
+         font-size: 1em;
     }
 }
 /* End of query */
-@media screen and (max-width: 866px) {
-    .navbar a {
-        color: #808081;
+ @media screen and (max-width: 866px) {
+     .navbar a {
+         color: #808081;
     }
-} 
+}
 /* End of query */
 /* Back to top button */
  .topbtn {
@@ -298,9 +299,7 @@
      color: rgb(6, 98, 196);
      background-color: rgb(234, 234, 234);
 }
-
-/* Content styles 
-   Content images */
+/* Content styles Content images */
  .contentimage {
      height: 404px;
      border: 1px solid rgb(187, 187, 187);
