--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -69,7 +69,7 @@
      display: block;
      padding: 10em;
      background-attachment: fixed;
-     background-position: bottom;
+     background-position: center;
      background-repeat: no-repeat;
      background-size: cover;
 }
@@ -282,22 +282,30 @@
     }
 }
 /* End of query */
-/* Back to top button */
- .topbtn {
-     float: right;
-     background-color: rgb(216, 214, 214);
-     border: none;
-     border-radius: 4px;
-     color: white;
-     text-align: center;
-     text-decoration: none;
-     font-size: 20px;
-     padding: 10px;
-     margin-top: 0.6em;
+/* Back to top button for above tablet devices */
+ @media screen and (min-width: 900px) {
+     .topbtn {
+         float: right;
+         background-color: rgb(216, 214, 214);
+         border: none;
+         border-radius: 4px;
+         color: white;
+         text-align: center;
+         text-decoration: none;
+         font-size: 20px;
+         padding: 10px;
+         margin-top: 0.6em;
+    }
+     .topbtn:hover {
+         color: rgb(6, 98, 196);
+         background-color: rgb(234, 234, 234);
+    }
 }
- .topbtn:hover {
-     color: rgb(6, 98, 196);
-     background-color: rgb(234, 234, 234);
+/* Hide the back to top button */
+ @media screen and (max-width: 900px) {
+     .topbtn {
+         display: none;
+    }
 }
 /* Content styles Content images */
  .contentimage {
@@ -324,6 +332,44 @@
  .footerclicked:visited {
      color: grey;
 }
+/* Footer styles above tablets */
+ @media screen and (min-width: 900px) {
+     footer {
+         margin-top: 0px;
+         clear: both;
+         padding: 1.2em;
+         margin-left: 9em;
+         font-size: 0.8em;
+         font-weight: bold;
+         color: black;
+         text-align: center;
+    }
+}
+/* End of query*/
+/* Keep the footer links one colour */
+ .footerclicked:visited {
+     color: grey;
+}
+/* Footer styles below tablets */
+ @media screen and (max-width: 900px) {
+     footer {
+         margin-top: 0px;
+         clear: both;
+         padding: 1.2em;
+         font-size: 0.8em;
+         font-weight: bold;
+         color: white;
+         text-align: center;
+         background-color: black;
+         word-spacing: 0.2em;
+         margin-left: 0;
+    }
+    /* Keep the footer links one colour */
+     .footerclicked:visited {
+         color: grey;
+    }
+}
+/* End of query*/
 /* When browswer window is 768px or less, make the padding 0 */
  @media screen and (max-width: 768px) {
      .flex-container1 {
@@ -372,3 +418,83 @@
      align-self: auto;
      flex: 1 1 14em;
 }
+/* When browswer window is 768px or less, make the padding 0 */
+ @media screen and (max-width: 768px) {
+     .flex-item {
+         padding: 0em !important;
+    }
+}
+/* End of query */
+/* Intro flex boxes */
+ .flex-item {
+     display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+     align-items: center;
+     margin-top: 2em;
+     padding: 0em 1em 0em;
+}
+ .flex-item > div {
+     background-color: white;
+     width: 100px;
+     margin: 10px;
+     text-align: center;
+     line-height: 75px;
+     font-size: 30px;
+     flex: 2 0 auto;
+     align-self: auto;
+     flex: 1 1 14em;
+     border-style: solid;
+}
+/* Middle box content styles */
+ @media (max-width: 540px) {
+     .block {
+         flex-direction: column;
+    }
+}
+/* End of query */
+ @media (min-width: 992px) {
+     .block {
+         max-width: 582px;
+    }
+}
+/* End of query */
+ .block {
+     display: -webkit-box;
+     display: -ms-flexbox;
+     display: flex;
+     align-items: center;
+     border: 1px solid grey;
+     padding: 30px 20px;
+     margin-bottom: 38px;
+}
+ .block-image {
+     width: 180px;
+     height: 180px;
+}
+ .middle-image {
+     vertical-align: middle;
+     border-style: none;
+     height: 180px;
+     width: 180px;
+}
+ .block-content {
+     padding-left: 24px;
+     padding-right: 24px;
+}
+ @media (max-width: 540px) {
+     .block-content {
+         margin-top: 20px;
+    }
+}
+/* End of query */
+/* Test, needs work */
+ .content2 {
+     font-family: "Tahoma", "Geneva", "sans-serif";
+     font-size: 0.5em;
+     text-align: justify;
+     border: 2px solid #FFF;
+     padding-bottom: 10px;
+     line-height: 1.2em;
+}
+ 
