--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -60,6 +60,13 @@
      padding-bottom: 10px;
      line-height: 1.2em;
 }
+/* Align content text at < 768 px */
+@media screen and (max-width: 768px) {
+    .content {
+        margin-right: 1em;
+    }
+}
+/* End of query */
 /* Hero image styles */
  .hero-image {
      background-image: url(../images/blackandwhite.jpg);
@@ -328,8 +335,8 @@
      color: black;
      text-align: center;
 }
-/* Keep the footer links one colour */
- .footerclicked:visited {
+/* Footer links main colour */
+ .footerclicked {
      color: grey;
 }
 /* Footer styles above tablets */
@@ -384,7 +391,7 @@
      flex-wrap: wrap;
      align-items: center;
      margin-top: 2em;
-     padding: 0em 3em 5em;
+     padding: 1em 9em 5em 5em;
 }
  .flex-container1 > div {
      background-color: white;
@@ -396,6 +403,7 @@
      flex: 2 0 auto;
      align-self: auto;
      flex: 1 1 14em;
+     margin-left: 1em;
 }
 /* Mid second flex boxes */
 /* Intro flex boxes */
@@ -425,7 +433,6 @@
     }
 }
 /* End of query */
-/* Intro flex boxes */
  .flex-item {
      display: flex;
      flex-direction: row;
@@ -434,20 +441,124 @@
      margin-top: 2em;
      padding: 0em 1em 0em;
 }
+/* test */
  .flex-item > div {
-     background-color: white;
-     width: 100px;
-     margin: 10px;
-     text-align: center;
-     line-height: 75px;
-     font-size: 30px;
-     flex: 2 0 auto;
-     align-self: auto;
-     flex: 1 1 14em;
-     border-style: solid;
+    /* background-color: white; */
+    /* width: 100px; */
+    margin: 10px;
+    /* text-align: center; */
+    /* line-height: 75px; */
+    font-size: 30px;
+    flex: 4 -1 initial;
+    /* align-self: auto; */
+    flex: 3 1 2em;
+    border-style: solid;
 }
+/* Flex-item media queries */
+@media screen and (min-width: 1526px) {
+    .flex-item {
+        padding-left: 5em;
+        padding-right: 5em;
+    }
+}
+@media screen and (min-width: 1700px) {
+    .flex-item {
+        padding-left: 10em;
+        padding-right: 10em;
+    }
+}
+@media screen and (min-width: 1870px) {
+    .flex-item {
+        padding-left: 15em;
+        padding-right: 15em;
+    }
+}
+@media screen and (min-width: 2000px) {
+    .flex-item {
+        padding-left: 25em;
+        padding-right: 25em;
+    }
+}
+@media screen and (min-width: 2254px) {
+    .flex-item {
+        padding-left: 30em;
+        padding-right: 30em;
+    }
+}
+@media screen and (min-width: 2400px) {
+    .flex-item {
+        padding-left: 35em;
+        padding-right: 35em;
+    }
+}
+/*TESTing -rename this comment to flex item 2 styles*/
+/* When browswer window is 768px or less, make the padding 0 */
+ @media screen and (max-width: 768px) {
+     .flex-item2 {
+         padding: 0em !important;
+    }
+}
+/* End of query */
+ .flex-item2 {
+     display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+     align-items: center;
+     margin-bottom: 2em;
+     padding: 0em 1em 0em;
+}
+ .flex-item2 > div {
+    /* background-color: white; */
+    /* width: 100px; */
+    margin: 10px;
+    /* text-align: center; */
+    /* line-height: 75px; */
+    font-size: 30px;
+    flex: 4 -1 initial;
+    /* align-self: auto; */
+    flex: 3 1 2em;
+    border-style: solid;
+}
+
+@media screen and (min-width: 1526px) {
+    .flex-item2 {
+        padding-left: 5em;
+        padding-right: 5em;
+    }
+}
+@media screen and (min-width: 1700px) {
+    .flex-item2 {
+        padding-left: 10em;
+        padding-right: 10em;
+    }
+}
+@media screen and (min-width: 1870px) {
+    .flex-item2 {
+        padding-left: 15em;
+        padding-right: 15em;
+    }
+}
+@media screen and (min-width: 2000px) {
+    .flex-item2 {
+        padding-left: 25em;
+        padding-right: 25em;
+    }
+}
+@media screen and (min-width: 2254px) {
+    .flex-item2 {
+        padding-left: 30em;
+        padding-right: 30em;
+    }
+}
+@media screen and (min-width: 2400px) {
+    .flex-item2 {
+        padding-left: 35em;
+        padding-right: 35em;
+    }
+}
+/* End of flex-item2 styles */
 /* Middle box content styles */
- @media (max-width: 540px) {
+ @media (max-width: 504px) {
      .block {
          flex-direction: column;
     }
@@ -459,28 +570,34 @@
     }
 }
 /* End of query */
+ @media screen and (max-width: 1266px) {
+     .block {
+         margin-left: 0 !important;
+    }
+}
+/* End of query */
  .block {
-     display: -webkit-box;
-     display: -ms-flexbox;
      display: flex;
-     align-items: center;
-     border: 1px solid grey;
-     padding: 30px 20px;
-     margin-bottom: 38px;
+    align-items: center;
+    /* border: 1px solid grey; */
+    padding: 1em 1.1em;
+    margin-left: 2em;
+    /* test margin-bottom: 38px; */
 }
  .block-image {
-     width: 180px;
-     height: 180px;
+     width: 185px;
+     height: 185px;
 }
  .middle-image {
+     background-image: url(../images/contenttwo.jpg);
      vertical-align: middle;
      border-style: none;
-     height: 180px;
-     width: 180px;
+     height: 185px;
+     width: 185px;
 }
  .block-content {
      padding-left: 24px;
-     padding-right: 24px;
+   /* padding-right: 24px; */
 }
  @media (max-width: 540px) {
      .block-content {
@@ -488,11 +605,11 @@
     }
 }
 /* End of query */
-/* Test, needs work */
+/* Block content text */
  .content2 {
      font-family: "Tahoma", "Geneva", "sans-serif";
      font-size: 0.5em;
-     text-align: justify;
+     /* neg text-align: justify; */
      border: 2px solid #FFF;
      padding-bottom: 10px;
      line-height: 1.2em;
