--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -60,10 +60,20 @@
      padding-bottom: 10px;
      line-height: 1.2em;
 }
+/* Make all content text smaller testing */
+ @media screen and (max-width: 550px) {
+     .h3body {
+    }
+     .headings {
+    }
+     .content {
+    }
+}
+/* End of query */
 /* Align content text at < 768 px */
-@media screen and (max-width: 768px) {
-    .content {
-        margin-right: 1em;
+ @media screen and (max-width: 768px) {
+     .content {
+         margin-right: 1em;
     }
 }
 /* End of query */
@@ -441,57 +451,13 @@
      margin-top: 2em;
      padding: 0em 1em 0em;
 }
-/* test */
  .flex-item > div {
-    /* background-color: white; */
-    /* width: 100px; */
-    margin: 10px;
-    /* text-align: center; */
-    /* line-height: 75px; */
-    font-size: 30px;
-    flex: 4 -1 initial;
-    /* align-self: auto; */
-    flex: 3 1 2em;
-    border-style: solid;
+     margin: 10px;
+     font-size: 30px;
+     flex: 4 -1 initial;
+     flex: 3 1 2em;
+     border: 1px solid grey;
 }
-/* Flex-item media queries */
-@media screen and (min-width: 1526px) {
-    .flex-item {
-        padding-left: 5em;
-        padding-right: 5em;
-    }
-}
-@media screen and (min-width: 1700px) {
-    .flex-item {
-        padding-left: 10em;
-        padding-right: 10em;
-    }
-}
-@media screen and (min-width: 1870px) {
-    .flex-item {
-        padding-left: 15em;
-        padding-right: 15em;
-    }
-}
-@media screen and (min-width: 2000px) {
-    .flex-item {
-        padding-left: 25em;
-        padding-right: 25em;
-    }
-}
-@media screen and (min-width: 2254px) {
-    .flex-item {
-        padding-left: 30em;
-        padding-right: 30em;
-    }
-}
-@media screen and (min-width: 2400px) {
-    .flex-item {
-        padding-left: 35em;
-        padding-right: 35em;
-    }
-}
-/*TESTing -rename this comment to flex item 2 styles*/
 /* When browswer window is 768px or less, make the padding 0 */
  @media screen and (max-width: 768px) {
      .flex-item2 {
@@ -508,55 +474,50 @@
      padding: 0em 1em 0em;
 }
  .flex-item2 > div {
-    /* background-color: white; */
-    /* width: 100px; */
-    margin: 10px;
-    /* text-align: center; */
-    /* line-height: 75px; */
-    font-size: 30px;
-    flex: 4 -1 initial;
-    /* align-self: auto; */
-    flex: 3 1 2em;
-    border-style: solid;
+     margin: 10px;
+     font-size: 30px;
+     flex: 4 -1 initial;
+     flex: 3 1 2em;
+     border: 1px solid grey;
 }
-
-@media screen and (min-width: 1526px) {
-    .flex-item2 {
-        padding-left: 5em;
-        padding-right: 5em;
+/* Fix box sizes at different widths */
+ @media screen and (min-width: 1526px) {
+     .flex-item2, .flex-item {
+         padding-left: 5em;
+         padding-right: 5em;
     }
 }
-@media screen and (min-width: 1700px) {
-    .flex-item2 {
-        padding-left: 10em;
-        padding-right: 10em;
+ @media screen and (min-width: 1700px) {
+     .flex-item2, .flex-item {
+         padding-left: 10em;
+         padding-right: 10em;
     }
 }
-@media screen and (min-width: 1870px) {
-    .flex-item2 {
-        padding-left: 15em;
-        padding-right: 15em;
+ @media screen and (min-width: 1870px) {
+     .flex-item2, .flex-item {
+         padding-left: 15em;
+         padding-right: 15em;
     }
 }
-@media screen and (min-width: 2000px) {
-    .flex-item2 {
-        padding-left: 25em;
-        padding-right: 25em;
+ @media screen and (min-width: 2000px) {
+     .flex-item2, .flex-item {
+         padding-left: 25em;
+         padding-right: 25em;
     }
 }
-@media screen and (min-width: 2254px) {
-    .flex-item2 {
-        padding-left: 30em;
-        padding-right: 30em;
+ @media screen and (min-width: 2254px) {
+     .flex-item2, .flex-item {
+         padding-left: 30em;
+         padding-right: 30em;
     }
 }
-@media screen and (min-width: 2400px) {
-    .flex-item2 {
-        padding-left: 35em;
-        padding-right: 35em;
+ @media screen and (min-width: 2400px) {
+     .flex-item2, .flex-item {
+         padding-left: 35em;
+         padding-right: 35em;
     }
 }
-/* End of flex-item2 styles */
+/* End of flex-item styles */
 /* Middle box content styles */
  @media (max-width: 504px) {
      .block {
@@ -578,11 +539,9 @@
 /* End of query */
  .block {
      display: flex;
-    align-items: center;
-    /* border: 1px solid grey; */
-    padding: 1em 1.1em;
-    margin-left: 2em;
-    /* test margin-bottom: 38px; */
+     align-items: center;
+     padding: 1em 1.1em;
+     margin-left: 2em;
 }
  .block-image {
      width: 185px;
@@ -597,7 +556,6 @@
 }
  .block-content {
      padding-left: 24px;
-   /* padding-right: 24px; */
 }
  @media (max-width: 540px) {
      .block-content {
@@ -609,9 +567,6 @@
  .content2 {
      font-family: "Tahoma", "Geneva", "sans-serif";
      font-size: 0.5em;
-     /* neg text-align: justify; */
-     border: 2px solid #FFF;
-     padding-bottom: 10px;
      line-height: 1.2em;
 }
  
