--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -38,11 +38,6 @@
      font-size: 1em;
      font-family:'serif';
 }
- @media screen and (max-device-width: 375px) {
-     .h3body {
-         font-size: 0.9em;
-    }
-}
 /* End of query */
 /* h4 headings */
  .headings {
@@ -60,13 +55,17 @@
      padding-bottom: 10px;
      line-height: 1.2em;
 }
-/* Make all content text smaller testing */
+/* Make all content text smaller */
  @media screen and (max-width: 550px) {
      .h3body {
+         font-size: 0.7em;
     }
      .headings {
+         font-size: 0.6em;
+         margin: -1em;
     }
      .content {
+         font-size: 0.4em;
     }
 }
 /* End of query */
@@ -451,7 +450,7 @@
      margin-top: 2em;
      padding: 0em 1em 0em;
 }
- .flex-item > div {
+ .flex-item > div, .flex-item2 > div {
      margin: 10px;
      font-size: 30px;
      flex: 4 -1 initial;
@@ -472,13 +471,6 @@
      align-items: center;
      margin-bottom: 2em;
      padding: 0em 1em 0em;
-}
- .flex-item2 > div {
-     margin: 10px;
-     font-size: 30px;
-     flex: 4 -1 initial;
-     flex: 3 1 2em;
-     border: 1px solid grey;
 }
 /* Fix box sizes at different widths */
  @media screen and (min-width: 1526px) {
