--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -20,7 +20,7 @@
 }
  h1 {
      font-family: "Tahoma", "Geneva", "sans-serif";
-     color: grey;
+     color: #808080;
      text-align: center;
      font-size: 1.4em;
      font-weight: 300;
@@ -162,7 +162,7 @@
      text-align: center;
 }
  .navbar a {
-     color: grey;
+     color: #808080;
      padding: 0.5em;
      text-decoration: none;
      border-bottom: 1px solid #dab506;
@@ -171,7 +171,7 @@
      background-color: antiquewhite;
 }
  .navbar a.active {
-     color: white;
+     color: #ffffff;
 }
 /* First query active for parallax title */
  @media screen and (min-width: 1274px) {
@@ -211,14 +211,14 @@
          position: fixed;
          display: block;
          overflow: hidden;
-         background-color: black;
+         background-color: #000000;
          position: fixed;
          top: -1em;
          width: 100%;
          z-index: 1;
     }
      .navbar a {
-         color: grey;
+         color: #808080;
          display: block;
          padding: 0.5em;
          text-decoration: none;
@@ -228,7 +228,7 @@
          background-color: antiquewhite;
     }
      .navbar a.active {
-         color: white;
+         color: #ffffff;
     }
      li {
          padding: 0 !important;
@@ -305,7 +305,7 @@
          background-color: rgb(216, 214, 214);
          border: none;
          border-radius: 4px;
-         color: white;
+         color: #ffffff;
          text-align: center;
          text-decoration: none;
          font-size: 20px;
@@ -341,12 +341,12 @@
      padding: 1.2em;
      font-size: 0.8em;
      font-weight: bold;
-     color: black;
+     color: #000000;
      text-align: center;
 }
 /* Footer links main colour */
  .footerclicked {
-     color: grey;
+     color: #808080;
 }
 /* Footer styles above tablets */
  @media screen and (min-width: 900px) {
@@ -357,14 +357,14 @@
          margin-left: 9em;
          font-size: 0.8em;
          font-weight: bold;
-         color: black;
+         color: #000000;
          text-align: center;
     }
 }
 /* End of query*/
 /* Keep the footer links one colour */
  .footerclicked:visited {
-     color: grey;
+     color: #808080;
 }
 /* Footer styles below tablets */
  @media screen and (max-width: 900px) {
@@ -374,15 +374,15 @@
          padding: 1.2em;
          font-size: 0.8em;
          font-weight: bold;
-         color: white;
+         color: #ffffff;
          text-align: center;
-         background-color: black;
+         background-color: #000000;
          word-spacing: 0.2em;
          margin-left: 0;
     }
     /* Keep the footer links one colour */
      .footerclicked:visited {
-         color: grey;
+         color: #808080;
     }
 }
 /* End of query*/
@@ -403,7 +403,6 @@
      padding: 1em 9em 5em 5em;
 }
  .flex-container1 > div {
-     background-color: white;
      width: 100px;
      margin: 10px;
      text-align: center;
@@ -425,7 +424,7 @@
      padding: 0em 5em;
 }
  .flex-container2 > div {
-     background-color: white;
+     background-color: #ffffff;
      width: 100px;
      margin: 10px;
      text-align: center;
@@ -455,7 +454,7 @@
      font-size: 30px;
      flex: 4 -1 initial;
      flex: 3 1 2em;
-     border: 1px solid grey;
+     border: 1px solid #808080;
 }
 /* When browswer window is 768px or less, make the padding 0 */
  @media screen and (max-width: 768px) {
