--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -7,8 +7,57 @@
      padding: 0;
      box-sizing: border-box;
 }
+/*test*/
+/*Scale content based on common resolutions*/
+/*test 4k*/
+
+
+/*@media (max-width: 2560px) and (max-height: 2880px) {
+    * {
+        zoom: 114%;
+    }
+}*/
+
+
+/*1440 x 2204 is very broken res [test] */
+
+@media (max-width: 1280px) and (max-height: 800px) {
+    * {
+        zoom: 98%;
+    }
+} 
+/* Most common mobile resolution support */
+/*  Common mobile resolutions https://www.hobo-web.co.uk/best-screen-size/ NOV 16-17 
+    -keeping for now test
+    -It's any res under the two at the same time I.E < 360 |/ <640 = work'*/
+@media (max-width: 360px) and (max-height: 640px) {
+    * {
+        zoom: 101%;
+    }
+} 
+
+@media screen and (max-width: 359px) {
+    * {
+        zoom: 100%;
+    }
+}
+/* Lowest supported resolution for assessment */
+@media screen and (max-width: 320px) {
+    * {
+        zoom: 95%;
+    }
+}
+/* End of queries */
+
+
+
+
+
+/*end test*/
+
  html {
-     background: #fffdf9;
+     /*background: #fffdf9; */
+     background: black;
 }
  body {
      font-family: "Tahoma", "Geneva", "sans-serif";
@@ -505,6 +554,13 @@
          padding-right: 35em;
     }
 }
+/*test*//*
+@media screen and (min-width: 2560px) {
+     .flex-item2, .flex-item {
+         padding-left: 2em;
+         padding-right: 2em;
+    }
+}*/
 /* End of flex-item styles */
 /* Middle box content styles */
  @media (max-width: 504px) {
