--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -7,56 +7,19 @@
      padding: 0;
      box-sizing: border-box;
 }
-/*test*/
-/*Scale content based on common resolutions*/
-/*test 4k*/
 
 
-/*@media (max-width: 2560px) and (max-height: 2880px) {
+@media (min-width: 3800px) and (min-height: 2000px) {
     * {
-        zoom: 114%;
-    }
-}*/
-
-
-/*1440 x 2204 is very broken res [test] */
-
-@media (max-width: 1280px) and (max-height: 800px) {
-    * {
-        zoom: 98%;
+        zoom: 109%;
     }
 } 
-/* Most common mobile resolution support */
-/*  Common mobile resolutions https://www.hobo-web.co.uk/best-screen-size/ NOV 16-17 
-    -keeping for now test
-    -It's any res under the two at the same time I.E < 360 |/ <640 = work'*/
-@media (max-width: 360px) and (max-height: 640px) {
-    * {
-        zoom: 101%;
-    }
-} 
-
-@media screen and (max-width: 359px) {
-    * {
-        zoom: 100%;
-    }
-}
-/* Lowest supported resolution for assessment */
-@media screen and (max-width: 320px) {
-    * {
-        zoom: 95%;
-    }
-}
-/* End of queries */
-
-
-
-
 
 /*end test*/
 
  html {
      /*background: #fffdf9; */
+     /*test take this out when done*/
      background: black;
 }
  body {
@@ -446,7 +409,18 @@
      flex-wrap: wrap;
      align-items: center;
      margin-top: 2em;
-     padding: 1em 9em 5em 5em;
+     padding: 5em 14em 6em 15em;
+}
+/* Move the content to a better position */
+@media (max-width: 1920px) and (max-height: 1080px) {
+    .flex-container1 {
+        margin-top: -2em;
+    }
+} 
+@media screen and (max-width: 1140px) {
+    .flex-container1 {
+        padding: 1em 4em 5em 5em;
+    }
 }
  .flex-container1 > div {
      width: 100px;
@@ -554,13 +528,12 @@
          padding-right: 35em;
     }
 }
-/*test*//*
 @media screen and (min-width: 2560px) {
      .flex-item2, .flex-item {
-         padding-left: 2em;
-         padding-right: 2em;
+         padding-left: 35em;
+         padding-right: 35em;
     }
-}*/
+}
 /* End of flex-item styles */
 /* Middle box content styles */
  @media (max-width: 504px) {
@@ -599,7 +572,13 @@
      width: 185px;
 }
  .block-content {
-     padding-left: 24px;
+     padding-left: 2em;
+}
+/*test*/
+@media screen and (max-width: 1137px) {
+ .block-content {
+     padding-left: 1em;
+    }
 }
  @media (max-width: 540px) {
      .block-content {
