--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -7,25 +7,24 @@
      padding: 0;
      box-sizing: border-box;
 }
-
-
-@media (min-width: 3800px) and (min-height: 2000px) {
-    * {
-        zoom: 109%;
+ @media (min-width: 3800px) and (min-height: 2000px) {
+     * {
+         zoom: 109%;
     }
-} 
-
-/*end test*/
-
+}
+ @media (min-width: 2560px) and (min-height: 1300px) {
+     * {
+         zoom: 108%;
+    }
+}
+/* End of resolutions scalling queries */
  html {
-     /*background: #fffdf9; */
-     /*test take this out when done*/
-     background: black;
+     background: #ffffff;
 }
  body {
      font-family: "Tahoma", "Geneva", "sans-serif";
      font-size: 1em;
-     background: white;
+     background: #ffffff;
      margin: auto;
 }
  h1 {
@@ -412,14 +411,14 @@
      padding: 5em 14em 6em 15em;
 }
 /* Move the content to a better position */
-@media (max-width: 1920px) and (max-height: 1080px) {
-    .flex-container1 {
-        margin-top: -2em;
+ @media (max-width: 1920px) and (max-height: 1080px) {
+     .flex-container1 {
+         margin-top: -2em;
     }
-} 
-@media screen and (max-width: 1140px) {
-    .flex-container1 {
-        padding: 1em 4em 5em 5em;
+}
+ @media screen and (max-width: 1140px) {
+     .flex-container1 {
+         padding: 1em 4em 5em 5em;
     }
 }
  .flex-container1 > div {
@@ -433,30 +432,9 @@
      flex: 1 1 14em;
      margin-left: 1em;
 }
-/* Mid second flex boxes */
-/* Intro flex boxes */
- .flex-container2 {
-     display: flex;
-     flex-direction: row;
-     flex-wrap: wrap;
-     align-items: center;
-     margin-top: 2em;
-     padding: 0em 5em;
-}
- .flex-container2 > div {
-     background-color: #ffffff;
-     width: 100px;
-     margin: 10px;
-     text-align: center;
-     line-height: 75px;
-     font-size: 30px;
-     flex: 2 0 auto;
-     align-self: auto;
-     flex: 1 1 14em;
-}
 /* When browswer window is 768px or less, make the padding 0 */
  @media screen and (max-width: 768px) {
-     .flex-item {
+     .flex-item .flex-item2 .flex-container2 {
          padding: 0em !important;
     }
 }
@@ -466,7 +444,7 @@
      flex-direction: row;
      flex-wrap: wrap;
      align-items: center;
-     margin-top: 2em; 
+     margin-top: 2em;
      padding: 0em 1em 0em;
 }
  .flex-item > div, .flex-item2 > div {
@@ -476,13 +454,6 @@
      flex: 3 1 2em;
      border: 1px solid #808080;
 }
-/* When browswer window is 768px or less, make the padding 0 */
- @media screen and (max-width: 768px) {
-     .flex-item2 {
-         padding: 0em !important;
-    }
-}
-/* End of query */
  .flex-item2 {
      display: flex;
      flex-direction: row;
@@ -528,7 +499,7 @@
          padding-right: 35em;
     }
 }
-@media screen and (min-width: 2560px) {
+ @media screen and (min-width: 2560px) {
      .flex-item2, .flex-item {
          padding-left: 35em;
          padding-right: 35em;
@@ -574,10 +545,9 @@
  .block-content {
      padding-left: 2em;
 }
-/*test*/
-@media screen and (max-width: 1137px) {
- .block-content {
-     padding-left: 1em;
+ @media screen and (max-width: 1137px) {
+     .block-content {
+         padding-left: 1em;
     }
 }
  @media (max-width: 540px) {
@@ -585,11 +555,87 @@
          margin-top: 20px;
     }
 }
-/* End of query */
+/* End of queries */
 /* Block content text */
  .content2 {
      font-family: "Tahoma", "Geneva", "sans-serif";
      font-size: 0.5em;
      line-height: 1.2em;
 }
- 
+/* Last content */
+#form {
+    padding: 2em 19em;
+}
+/* test form positions*/
+@media screen and (max-width: 768px) {
+    #form {
+        padding: 0;
+    }
+}
+.contact-wrap {
+    margin-right: -15px;
+    margin-left: -15px;
+    max-width: 14em;
+    text-align: right;
+}
+.contact-heading {
+    margin-bottom: 40px;
+}
+/* Space between form areas */
+.form-spacing {
+    margin-bottom: 1em;
+}
+textarea {
+    overflow: auto;
+    resize: vertical;
+}
+/* From input areas */
+.form-area {
+    display: block;
+    width: 100%;
+    padding: 0.5em 0.7em;
+    font-size: 1em;
+    line-height: 1.5em;
+    color: #000000;
+    border: 1px solid #ced4da;
+}
+
+.submit-button {    
+    display: inline-block;
+    border: 1px solid #f3bd0694;
+    background-color: transparent;
+    font-size: 1.3em;
+    padding: 0.7em 1.5em;
+}
+/* Second flex container */
+ .flex-container2 {
+     display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+     align-items: center;
+     margin-top: 2em;
+     padding: 5em 14em 6em 15em;
+}
+/* Move the content to a better position */
+ @media (max-width: 1920px) and (max-height: 1080px) {
+     .flex-container2 {
+         margin-top: -2em;
+    }
+}
+ @media screen and (max-width: 1140px) {
+     .flex-container2 {
+         padding: 1em 4em 5em 5em;
+    }
+}
+ .flex-container2 > div {
+     width: 100px;
+     margin: 10px;
+     text-align: center;
+     line-height: 75px;
+     font-size: 30px;
+     flex: 2 0 auto;
+     align-self: auto;
+     flex: 1 1 14em;
+     margin-left: 1em;
+}
+/* End of last content */
