--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -260,6 +260,7 @@
      padding: 0 0.6em 0 0;
      font-size: 0.9em;
 }
+/*test this is throwing an error*/
  @media screen (min-width: 320px) {
      .parallax-header {
          font-size: 4em;
