--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -13,11 +13,6 @@
          zoom: 109%;
     }
 }
- @media (min-height: 1300px) and (min-width: 2560px) {
-     * {
-         zoom: 104%;
-    }
-}
  html {
      background: #ffffff;
 }
@@ -226,7 +221,6 @@
          display: block;
          overflow: hidden;
          background-color: #000000;
-         position: fixed;
          top: -1em;
          width: 100%;
          z-index: 1;
@@ -271,11 +265,6 @@
      padding: 0 0.6em 0 0;
      font-size: 0.9em;
 }
- @media screen (min-width: 320px) {
-     .parallax-header {
-         font-size: 4em;
-    }
-}
 /* End of query*/
 /* Laptop and above styles */
  @media screen and (min-width: 769px) {
@@ -313,7 +302,7 @@
 /* End of query */
  @media screen and (max-width: 866px) {
      .navbar a {
-         color: #808081;
+         color: #ffffff;
     }
 }
 /* End of query */
@@ -364,8 +353,8 @@
      text-align: center;
 }
 /* Footer links main colour */
- .footerclicked {
-     color: #424040;
+ .footerclicked, .footerclicked:visited {
+     color: #060f82;
 }
 /* Footer styles above tablets */
  @media screen and (min-width: 900px) {
@@ -381,10 +370,6 @@
     }
 }
 /* End of query*/
-/* Keep the footer links one colour */
- .footerclicked:visited {
-     color: #424040;
-}
 /* Footer styles below tablets */
  @media screen and (max-width: 900px) {
      footer {
@@ -399,14 +384,16 @@
          word-spacing: 0.2em;
          margin-left: 0;
     }
-    /* Keep the footer links one colour */
-     .footerclicked:visited {
-         color: #424040;
+}
+/* Footer links colour for tablets and below */
+ @media screen and (max-width: 900px) {
+     .footerclicked, .footerclicked:visited {
+         color: #9e9e9e;
     }
 }
 /* End of query*/
-.footer-background {
-    background-color: #8080804a;
+ .footer-background {
+     background-color: #8080804a;
 }
 /* When browswer window is 768px or less, make the padding 0 */
  @media screen and (max-width: 768px) {
@@ -441,7 +428,6 @@
      text-align: center;
      line-height: 75px;
      font-size: 30px;
-     flex: 2 0 auto;
      align-self: auto;
      flex: 1 1 14em;
      margin-left: 1em;
@@ -464,7 +450,6 @@
  .flex-item > div, .flex-item2 > div {
      margin: 10px;
      font-size: 30px;
-     flex: 4 -1 initial;
      flex: 3 1 2em;
      border: 1px solid #808080;
 }
@@ -518,23 +503,10 @@
          padding-right: 35em;
     }
 }
- @media screen and (min-width: 2560px) {
-     .flex-item2, .flex-item {
-         padding-left: 35em;
-         padding-right: 35em;
-         zoom: 100%;
-    }
-}
  @media screen and (min-width: 2700px) {
      .flex-item2, .flex-item {
          padding-left: 5em;
          padding-right: 5em;
-    }
-}
- @media screen and (min-width: 3000px) {
-     .flex-item2, .flex-item {
-         padding-left: 40em !important;
-         padding-right: 40em !important;
     }
 }
 /* End of flex-item styles */
@@ -621,7 +593,6 @@
 }
 /* Last content */
  #form {
-     padding: 4em 0;
      margin-left: 1em;
      margin-right: 1em;
      background: #fff;
@@ -765,7 +736,6 @@
      font-size: 30px;
      flex: 2 0 auto;
      align-self: auto;
-     flex: 1 1 14em;
      margin-left: 1em;
 }
 /* End of last content */
