--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -554,6 +554,12 @@
     }
 }
 /* End of query */
+/* Styles for broken image links */
+img {
+    font-size: 0.5em;
+    color: #000000;
+    display: inline-block;
+}
  .block {
      display: flex;
      align-items: center;
@@ -565,7 +571,7 @@
      height: 185px;
 }
  .middle-image1 {
-     background-image: url(../images/contentthree.jpg);
+     /*background-image: url(../images/contentthree.jpg);*/
      height: 185px;
      background-position: center;
      background-size: cover;
