--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -114,8 +114,6 @@
 /* Hero image styles */
  .hero-image {
      background-image: url(../images/black_and_white.jpg);
-    /*background-image: url(../images/black_and_white.jpg);
-     */
      min-height: 30em;
      position: relative;
      display: block;
@@ -125,7 +123,7 @@
      background-repeat: no-repeat;
      background-size: cover;
 }
-/* Stop parrallax scrolling for tablet and below devices */
+/* Stop parallax scrolling for tablet and below devices */
  @media only screen and (max-device-width: 900px) {
      .hero-image {
          background-attachment: scroll;
@@ -155,7 +153,7 @@
 /* Change mid image at tablet and below */
  @media screen and (max-width: 900px) {
      .parallax-image2 {
-         background-image: url(../images/contenttwo.jpg);
+         background-image: url(../images/contenttwo.jpg); 
          height: 13em;
          position: relative;
          display: block;
@@ -260,7 +258,7 @@
          z-index: 1;
     }
      .navbar a {
-         color: #808080;
+         color: #ffffff;
          display: block;
          padding: 0.5em;
          text-decoration: none;
@@ -491,7 +489,7 @@
      margin: 10px;
      font-size: 30px;
      flex: 3 1 2em;
-     border: 1px solid #808080;
+     border: 1px solid burlywood;
 }
  @media screen and (min-width: 421px) {
      .flex-item > div, .flex-item2 > div {
@@ -623,7 +621,7 @@
          padding-left: 1em;
     }
 }
- @media (max-width: 540px) {
+ @media (max-width: 578px) {
      .block-content {
          margin-top: 20px;
     }
